[gd_scene load_steps=29 format=2]

[ext_resource path="res://Sprites/2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Cat/Run (1).png" type="Texture" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Cat/Run (8).png" type="Texture" id=4]
[ext_resource path="res://Sprites/Cat/Run (7).png" type="Texture" id=5]
[ext_resource path="res://Sprites/Cat/Run (6).png" type="Texture" id=6]
[ext_resource path="res://Sprites/Cat/Run (5).png" type="Texture" id=7]
[ext_resource path="res://Sprites/Cat/Run (2).png" type="Texture" id=8]
[ext_resource path="res://Sprites/Cat/Run (3).png" type="Texture" id=9]
[ext_resource path="res://Sprites/Cat/Run (4).png" type="Texture" id=10]
[ext_resource path="res://Sprites/Cat/Idle (1).png" type="Texture" id=11]
[ext_resource path="res://Sprites/Cat/Idle (4).png" type="Texture" id=12]
[ext_resource path="res://Sprites/Cat/Idle (2).png" type="Texture" id=13]
[ext_resource path="res://Sprites/Cat/Idle (3).png" type="Texture" id=14]
[ext_resource path="res://Sprites/Cat/Idle (6).png" type="Texture" id=15]
[ext_resource path="res://Sprites/Cat/Idle (5).png" type="Texture" id=16]
[ext_resource path="res://Sprites/Cat/Idle (7).png" type="Texture" id=17]
[ext_resource path="res://Sprites/Cat/Idle (8).png" type="Texture" id=18]
[ext_resource path="res://Sprites/Cat/Idle (9).png" type="Texture" id=19]
[ext_resource path="res://Sprites/Cat/Idle (10).png" type="Texture" id=20]
[ext_resource path="res://MainScene.gd" type="Script" id=21]
[ext_resource path="res://Sprites/Background_1.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Background_3.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Background_5.png" type="Texture" id=26]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 192 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "run",
"speed": 12.0
} ]

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="TileSet" id=4]
0/name = "2.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="MainScene" type="Node2D"]
script = ExtResource( 21 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 80, 328 )
scale = Vector2( 0.5, 0.5 )
current = true
zoom = Vector2( 2, 2 )
smoothing_enabled = true

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 80, 328 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, 30 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
frames = SubResource( 2 )
animation = "idle"

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 4 )
format = 1
tile_data = PoolIntArray( 589803, 0, 0, 589805, 0, 0, 589807, 0, 0, 589809, 0, 0, 589811, 0, 0, 589813, 0, 0, 589814, 0, 0, 589815, 0, 0, 589817, 0, 0, 589819, 0, 0, 589820, 0, 0, 589822, 0, 0, 524288, 0, 0, 524290, 0, 0, 524292, 0, 0, 524294, 0, 0, 524296, 0, 0, 524298, 0, 0, 524300, 0, 0, 524302, 0, 0, 524304, 0, 0, 524306, 0, 0, 524308, 0, 0, 524310, 0, 0, 524312, 0, 0, 524314, 0, 0, 524316, 0, 0, 524318, 0, 0, 524320, 0, 0, 524322, 0, 0, 524324, 0, 0, 524326, 0, 0, 524328, 0, 0, 524330, 0, 0, 524332, 0, 0, 524334, 0, 0, 524336, 0, 0, 524338, 0, 0, 524340, 0, 0, 524342, 0, 0, 524344, 0, 0, 524346, 0, 0, 524348, 0, 0, 524350, 0, 0, 524352, 0, 0 )

[node name="Background_1" type="Sprite" parent="."]
position = Vector2( -40, 385.152 )
scale = Vector2( 0.5, 0.5 )
z_index = -4
texture = ExtResource( 22 )

[node name="Background_3" type="Sprite" parent="."]
position = Vector2( -40, 408.09 )
scale = Vector2( 0.5, 0.5 )
z_index = -3
texture = ExtResource( 24 )

[node name="Background_5" type="Sprite" parent="."]
position = Vector2( -40, 210.313 )
scale = Vector2( 0.5, 0.5 )
z_index = -2
texture = ExtResource( 26 )
